# planetblupi

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  COPYING  LICENSE  LICENSE.all  PROJECT_OVERVIEW.md  README-user.md  README.md  README.translators.md  README.voices.md  action.cpp  action.h  actions.h  arrange.cpp  arrow.cur  arrowdl.cur  arrowdow.cur  arrowdr.cur  arrowlef.cur  arrowrig.cur  arrowul.cur  arrowup.cur  arrowur.cur  blupi-d.rc  blupi-e.rc  blupi-f.rc  blupi.cpp  blupi.h  button.cpp  button.h  chemin.cpp  cursor1.cur  ddutil.cpp  ddutil.h  decblupi.cpp  decgoal.cpp  decio.cpp  decmap.cpp  (+40 more)
cmake/: FindArgagg.cmake  FindIconv.cmake  FindSDLKitchensink.cmake  LinuxAppImageBuild.cmake  Ronn2Man.cmake
data/: config.def  demo000.blp  info.blp  user000.blp  user003.blp  user005.blp  user006.blp  user007.blp  user009.blp  world000.blp  world001.blp  world002.blp  world100.blp  world104.blp  world106.blp  world107.blp  world109.blp  world110.blp  world111.blp  world112.blp  world115.blp  world117.blp  world119.blp  world121.blp  world122.blp  world125.blp  world127.blp  world128.blp  world130.blp  world133.blp  world134.blp  world135.blp  world136.blp  world137.blp  world140.blp  world141.blp  world152.blp  world200.blp  world202.blp  world204.blp  (+5 more)
ffmpeg-3.2.2-win32-dev/: README.txt
gettext/: gettext.h
image/: bignum.blp  build.blp  button.blp  bye.blp  floor002.blp  history0.blp  info000.blp  info002.blp  init.blp  jauge.blp  last000.blp  last001.blp  little.blp  lost.blp  mask1.blp  movie.blp  obj-o001.blp  obj-o002.blp  obj002.blp  obj003.blp  read.blp  stop000.blp  stop001.blp  stop002.blp  text.blp  write.blp
movie/: history2.avi  history2.blp  play101.avi  play101.blp  play103.avi  play103.blp  play103.mkv  play105.avi  play105.blp  play105.mkv  play107.avi  play107.blp  play107.mkv  play108.avi  play108.blp  play108.mkv  play110.avi  play110.blp  play113.avi  play113.blp  play113.mkv  play116.avi  play116.blp  play116.mkv  play118.avi  play118.blp  play118.mkv  play119.avi  play119.blp  play124.avi  play124.blp  play124.mkv  win005.blp  win129.avi  win129.blp
resources/_languages/DEUTSCH/: sound000.blp  sound017.blp  sound020.blp  sound030.blp  sound032.blp  sound055.blp  sound059.blp  sound068.blp  sound070.blp  sound073.blp  sound074.blp
resources/_languages/ENGLISH/: sound012.blp  sound014.blp  sound025.blp  sound037.blp  sound038.blp  sound056.blp  (+5 more)
resources/darwin/: Info.plist.in  Planet Blupi  background.tiff  dmgsetup.scpt
resources/data/: config.ini  config.json  demo001.blp  demo002.blp  demo003.blp  enigmes.blp  user001.blp  user002.blp  user004.blp  user008.blp  world003.blp  world004.blp  world005.blp  world101.blp  world102.blp  world103.blp  world105.blp  world108.blp  world113.blp  world114.blp  world116.blp  world118.blp  world120.blp  world123.blp  world124.blp  world126.blp  world129.blp  world131.dev.blp  world132.blp  world139.blp  world142.dev.blp  world148.blp  world150.blp  world151.blp  world153.blp  world200.blp  world201.blp  world203.blp  world205.blp  world207.blp  (+4 more)
resources/icon/: blupi.icns
resources/image/: blupi.blp  button00.blp  floor000.blp  floor001.blp  floor003.blp  fog.blp  help.blp  hili.blp  history1.blp  info001.blp  insert.blp  intro1.blp  intro2.blp  music.blp  obj-o000.blp  obj-o003.blp  obj000.blp  obj001.blp  play.blp  region.blp  setup.blp  term.blp  win.blp
resources/linux/: application.desktop.in  org.blupi.planetblupi.appdata.xml  planetblupi.appdata.xml
resources/movie/: history2.mkv  play101.mkv  play103.mkv  play105.mkv  play107.mkv  play108.mkv  play110.mkv  play113.mkv  play116.mkv  play118.mkv  play119.mkv  play124.mkv  win129.mkv
resources/music/: music000.mid  music001.mid  music002.mid  music003.mid  music004.mid  music008.mid
resources/nsis/: NSIS.template.in  bootstrap.sh
resources/po/: ar.po  de.po  en_US.po  es.po  fr.po  he.po  hu.po  it.po  pl.po  planetblupi.pot  pt.po  tr.po
resources/sound/: music006.blp  music009.blp  sound008.blp  sound010.blp  sound019.blp  sound052.blp  sound065.blp  sound069.blp  sound075.blp  sound084.blp
resources/translations/: fr.po  planetblupi.pot
resources/win32/: planetblupi.rc  planetblupi.rc.in
sound/: music005.blp  music007.blp  sound002.blp  sound022.blp  sound024.blp  sound027.blp  sound039.blp  sound040.blp  sound043.blp  sound045.blp  sound053.blp  sound063.blp  sound067.blp  sound072.blp
sound/deutsch/: sound003.blp  sound018.blp  sound033.blp  sound044.blp  sound047.blp  sound050.blp  sound057.blp  sound060.blp  sound061.blp  sound062.blp  sound067.blp  sound069.blp  sound071.blp  sound072.blp
sound/english/: sound002.blp  sound003.blp  sound006.blp  sound007.blp  sound017.blp  sound018.blp  sound027.blp  sound057.blp  sound058.blp  sound060.blp  sound061.blp  sound063.blp  sound065.blp  sound067.blp  sound082.blp
sound/francais/: sound003.blp  sound004.blp  sound006.blp  sound007.blp  sound011.blp  sound026.blp  sound028.blp  sound033.blp  sound036.blp  sound041.blp  sound056.blp  sound057.blp  sound058.blp  sound059.blp  sound060.blp  sound061.blp  sound064.blp  sound068.blp  sound078.blp
sound/us/: sound003.blp  sound006.blp  sound008.blp  sound009.blp  sound016.blp  sound019.blp  sound023.blp  sound034.blp  sound046.blp  sound054.blp  sound056.blp  sound059.blp  sound060.blp  sound061.blp  sound065.blp  sound067.blp  sound068.blp  sound069.blp  sound070.blp  sound071.blp  sound073.blp  sound081.blp  sound083.blp
src/: .clang-format  action.cpp  action.cpp.orig  action.cxx  action.h  arrange.cpp  arrange.cxx  blupi.cpp  blupi.cpp.orig  blupi.cxx  blupi.h  button.cpp  button.cxx  button.h  button.h.orig  chemin.cpp  chemin.cpp.orig  config.h.in  decblupi.cpp  decblupi.cxx  decgoal.cpp  decgoal.cxx  decgoal.h  decgoal.h.orig  decio.cpp  decio.cxx  decmap.cpp  decmap.cpp.orig  decmap.cxx  decmove.cpp  decmove.cpp.orig  decmove.cxx  decmove.h  decmove.h.orig  decor.cpp  decor.cpp.orig  decor.cxx  decor.h  decstat.cpp  decstat.cxx  (+58 more)
src/platform/: platform_js.cxx  platform_sdl.cxx
src/win32/: planetblupi.rc
(+64 files in other folders)
